WISH: skipscroll option
WISH: selection-color-pair instead of reverse video
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
WISH: anyevent mouse notification / manage MotionMask better.
WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
DUMB: support tex fonts

TODO: rxvt -bg "#262626" -fn "xft:Andale Mono:pixelsize=15"
      # causes some lines with #252525 in the output. rounding bug in xft?
TODO: zero scorllback buffer should free memory
TODO: kuake
TODO: depth resource not working(?)
TODO: fix the flaw in the url regex jost pointed out
TODO: look into the selection hilight patch
TODO: implement smartcase-like search in searchable-scrollback
TODO: check wether -depth works as resource
	- add FORCE_UNBUFFERED_XFT define to features.h.
        - double-buffered xft drawing did suffer from pixel offset issues
          when pixmap transparency was enabled.
	- moved on_osc_seq to on_osc_seq_perl and added a more
          generic osc_seq.
        - fix a bug causing double callback invocations when perl hooks
          were invoked recursively.
        - the automove-background extension now properly works when the
          pixmap gets reset with an osc sequence (sqweek).
        - selection-pastebin did not work properly with non-latin1-characters.
        - apply colorUL only when the text colour is the default fg
          (patch by Wu Fengguang).
        - removed rxvtlib.h from the tarball, it had no reason to be there
          (spotted by Decklin Foster).
        - fix compiling with TRANSPARENT but !XPM_BACKGROUND, as reported 
          by omatunto_.
        - slap in a using namespace std, might help on platforms that don't
          follow C++ closely enough.
        - fix mailto url regex, spotted within milliseconds by Jost Krieger.

7.7  Tue Feb 21 12:32:49 CET 2006